infra/k8s/auth-mongo-deplyoment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
        labels:
          app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo
