infra/k8s/auth-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: auth
  ports: 
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
