infra/k8s/expiration-redis-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: expiration-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
