infra/k8s/orders-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: orders-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
