infra/k8s/orders-mongo-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: orders-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
