infra/k8s/payments-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: payments-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
