infra/k8s/tickets-mongo-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: tickets-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
